--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     </div>
     
     <button id="bouton" onclick="document.getElementById('video').play()">bouton</button>
+    <!-- <button id="voirSocket">Socket</button> -->
     <script src="/socket.io/socket.io.js"></script>
     <script src="/watch.js"></script>
     
